# dejargonizer-py

./: LICENSE  README.md  pyproject.toml
src/jargon_project/: __init__.py  grader.py  jargon_list.py
